# Datos-2-Proyecto-1

./: CMakeLists.txt
Cliente-Servidor/: Cliente  Cliente.cpp  JsonHandler.cpp  Logger.cpp  MemoryManager.cpp  Servidor  Servidor.cpp  cliente  cliente-app  cliente.cpp  servidor  servidor-app  servidor.cpp  sfmlTest.cpp
Cliente-Servidor/ClienteRes/: GUI.cpp  JsonHandler.cpp  ListaDobleEnlazada.cpp
Cliente-Servidor/MemoryList/: LinkedList.cpp  Node.cpp
Cliente-Servidor/RLVList/: RLVlist.cpp  RLVnode.cpp
Doxygendoc/html/: _g_u_i_8cpp__dep__incl.map  _g_u_i_8cpp__dep__incl.md5  _g_u_i_8cpp__incl.map  _g_u_i_8cpp__incl.md5  _json_handler_8cpp__dep__incl.map  _json_handler_8cpp__dep__incl.md5  _json_handler_8cpp__incl.map  _json_handler_8cpp__incl.md5  _linked_list_8cpp__dep__incl.map  _linked_list_8cpp__dep__incl.md5  _linked_list_8cpp__incl.map  _linked_list_8cpp__incl.md5  _lista_doble_enlazada_8cpp__dep__incl.map  _lista_doble_enlazada_8cpp__dep__incl.md5  _lista_doble_enlazada_8cpp__incl.map  _lista_doble_enlazada_8cpp__incl.md5  _lista_doble_enlazada_8cpp_a44e830c2d064a82c9f82dca6772b484b_icgraph.map  _lista_doble_enlazada_8cpp_a44e830c2d064a82c9f82dca6772b484b_icgraph.md5  _lista_doble_enlazada_8cpp_a813ff85432320022e40dbe4f0e7cafa2_cgraph.map  _lista_doble_enlazada_8cpp_a813ff85432320022e40dbe4f0e7cafa2_cgraph.md5  _lista_doble_enlazada_8cpp_a813ff85432320022e40dbe4f0e7cafa2_icgraph.map  _lista_doble_enlazada_8cpp_a813ff85432320022e40dbe4f0e7cafa2_icgraph.md5  _lista_doble_enlazada_8cpp_ac87c0466e9dc65a2f7c3618b91feb037_icgraph.map  _lista_doble_enlazada_8cpp_ac87c0466e9dc65a2f7c3618b91feb037_icgraph.md5  _logger_8cpp__dep__incl.map  _logger_8cpp__dep__incl.md5  _logger_8cpp__incl.map  _logger_8cpp__incl.md5  _memory_manager_8cpp__dep__incl.map  _memory_manager_8cpp__dep__incl.md5  _memory_manager_8cpp__incl.map  _memory_manager_8cpp__incl.md5  _node_8cpp__dep__incl.map  _node_8cpp__dep__incl.md5  _node_8cpp__incl.map  _node_8cpp__incl.md5  _r_l_vlist_8cpp__dep__incl.map  _r_l_vlist_8cpp__dep__incl.md5  _r_l_vlist_8cpp__incl.map  _r_l_vlist_8cpp__incl.md5  (+240 more)
Doxygendoc/latex/: _g_u_i_8cpp__dep__incl.md5  _g_u_i_8cpp__incl.md5  _json_handler_8cpp__dep__incl.md5  _json_handler_8cpp__incl.md5  _node_8cpp__incl.md5  (+133 more)
